--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Ignacio Miguel Ballester Abril",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1"
   },
   "devDependencies": {
